--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ streamlit==1.19.0
 streamlit_authenticator==0.1.5
 openpyxl == 3.0.10
 matplotlib==3.5.2
+gspread==5.3.2
 XlsxWriter==3.0.3
 openai==0.28.0
 sqlalchemy==2.0.25
 pyodbc==4.0.39
+altair==4.0
